--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "cordova.livesync": "npm run cordova -- run -- --live-reload",
     "cordova.serve": "npm run cordova -- serve 5555",
     "start.cordova": "npm run build && npm run cordova -- serve",
-    "ionic:build-original": "./node_modules/.bin/ionic-app-scripts build",
-    "ionic:serve-original": "./node_modules/.bin/ionic-app-scripts serve",
+    "ionic:build": "./node_modules/.bin/ionic-app-scripts build",
+    "ionic:serve": "./node_modules/.bin/ionic-app-scripts serve",
     "ionic.serve": "ionic serve --port 5555 --all",
     "ionic.livesync": "npm run ionic.serve -- --lab",
     "start.ionic": "npm run build && npm run ionic.serve",
@@ -95,6 +95,7 @@
     "plist": "2.0.1",
     "q": "1.4.1",
     "rxjs": "5.1.1",
+    "sw-toolbox": "3.4.0",
     "ts-helpers": "1.1.2",
     "web-animations-js": "^2.2.3",
     "zone.js": "^0.8.5"
@@ -103,7 +104,7 @@
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.1",
     "@angular/service-worker": "^1.0.0-beta.8",
-    "@ionic/app-scripts": "1.3.0",
+    "@ionic/app-scripts": "1.3.2",
     "@ionic/cli-build-ionic-angular": "0.0.4",
     "@ionic/cli-plugin-cordova": "0.0.12",
     "@ionic/cli-plugin-ionic-angular": "0.0.6",
