--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -15,9 +15,9 @@
     "sourceMap": true,
     "target": "es5",
     "typeRoots": [
-      "../node_modules/@types"
+      "../node_modules/@types",
+      "../typings"
     ],
-    "types": [],
     "paths": {
       "ionic-angular": ["../node_modules/ionic-angular"]
     },
