--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "angular-pwa-seed",
+  "name": "koiosanalytics",
   "version": "0.1.0",
   "license": "MIT",
   "angular-cli": {},
   "config": {
-    "name": "AngularPwaSeed",
-    "shortname": "AngularPwaSeed",
+    "name": "KoiosAnalytics",
+    "shortname": "KoiosAnalytics",
     "color": "#0f3a54"
   },
   "scripts": {
@@ -13,11 +13,11 @@
     "serve": "npm run concurrently -- --kill-others \"npm run build.watch\" \"npm run wait && npm run ionic.serve\"",
     "start.mobile": "npm run concurrently -- --kill-others \"npm run build.watch\" \"npm run wait && npm run ionic.livesync\"",
     "serve.mobile": "npm run start.mobile",
-    "docker.build": "docker build -f Dockerfile -t angular-pwa-seed:latest .",
-    "docker.build.force": "docker build --no-cache -f Dockerfile -t angular-pwa-seed:latest .",
-    "docker.run": "docker run -p 5555:5555 --name angular-pwa-seed-container --rm angular-pwa-seed:latest",
-    "docker.run.interative": "docker run -p 5555:5555 --name angular-pwa-seed-container --rm -i -t angular-pwa-seed bash",
-    "docker.run.script": "docker exec angular-pwa-seed-container npm run",
+    "docker.build": "docker build -f Dockerfile -t koiosanalytics:latest .",
+    "docker.build.force": "docker build --no-cache -f Dockerfile -t koiosanalytics:latest .",
+    "docker.run": "docker run -p 5555:5555 --name koiosanalytics-container --rm koiosanalytics:latest",
+    "docker.run.interative": "docker run -p 5555:5555 --name koiosanalytics-container --rm -i -t koiosanalytics bash",
+    "docker.run.script": "docker exec koiosanalytics-container npm run",
     "wait": "npm run sleepms -- 40000",
     "lint": "ng lint",
     "test": "ng test",
