--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,42 +1,37 @@
-image: node:5
+mage: node:latest
+
+before_script:
+  - apt-get --quiet update --yes
+  - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
+
+#  install node js
+  - apt-get --quiet install -y build-essential
+  - curl -sL http://deb.nodesource.com/setup_6.x | bash -
+  - apt-get --quiet install -y nodejs
+  - apt-get --quiet update --yes
+  - npm -v
+  - npm install -g @angular/cli@latest
 
 stages:
   - test
-  - build
+  - deploy
 
-cache:
-  key: "$CI_PROJECT_NAME/$CI_BUILD_REF_NAME"
-  paths:
-    - ./node_modules/
-
-before_script:
-  - export PATH=$PATH:./node_modules/.bin/
-  - npm install
-
-tslint_job:
+#deploy debug
+test:
   stage: test
-  tags:
-    - linux
-    - docker
   script:
-    - ng lint
-
-test_job:
-  stage: test
-  tags:
-    - linux
-    - docker
-  script:
-    - karma start --browsers PhantomJS --single-run
-
-build_job:
-  stage: build
-  tags:
-    - linux
-    - docker
+    - npm install
+    - ng build
   artifacts:
-    expire_in: 1 week
     paths:
-      - dist/*
+    - dist/
+
+#deploy build production
+deploy:
+  stage: deploy
   script:
-    - ng build --aot-prod --bh "./"
+    - npm install
+    - ng build --prod
+  artifacts:
+    paths:
+    - dist/
